[project]
name = "yc_januspro"
description = "ComfyUI unofficial node for Janus-Pro, a unified multi-modal understanding and generation framework. Added experimental node for two-image input"
version = "1.0.0"
license = {file =  = {file = "LICENSE"}}
dependencies = ["git+https://github.com/deepseek-ai/Janus.git"]

[project.urls]
Repository = "https://github.com/yichengup/ComfyUI_Yc_JanusPro"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_Yc_JanusPro"
Icon = ""
